--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,4 +1,4 @@
-name: learn-github-actions
+name: learn-github-actions111
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [ push ]
 jobs:
