--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,12 @@ jobs:
 
         run: |
           echo $ROOT_PATH
+      - name: Set the value
+        id: step_one
+        run: |
+          echo "action_state=yellow" >> "$GITHUB_ENV"
+      - name: Use the value
+        id: step_two
+        run: |
+          
+          echo "${{ env.action_state }}" # This will output 'yellow'
