--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,6 @@ jobs:
       - name: Use the value
         id: step_two
         run: |
-          
+          echo "${{ env}}"  
           echo "${{ env.action_state }}" # This will output 'yellow'
+          echo "$action_state"
