--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Use the value
         id: step_two
         run: |
-          echo "${{ env}}"  
+          echo "${{ GITHUB_SHA }"
+          echo "${{ env }}"  
           echo "${{ env.action_state }}" # This will output 'yellow'
           echo "$action_state"
           ls -alh
