--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Use the value
         id: step_two
         run: |
-          echo "$env.GITHUB_SHA"
+          echo "${{ env.GITHUB_SHA }}"
           echo "${{ env }}"  
           echo "${{ env.action_state }}" # This will output 'yellow'
           echo "$action_state"
