--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         id: step_two
         run: |
           echo "${{ env.GITHUB_SHA }}"
+          echo "${GITHUB_SHA}"
           echo "${{ env }}"  
           echo "${{ env.action_state }}" # This will output 'yellow'
           echo "$action_state"
