--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: ./kubectl
-          key: ${{ runner.os }}-kubectl-${{ hashFiles('./kubectl') }}
+          path: ~/kubectl
+          key: ${{ runner.os }}-kubectl-${{ hashFiles('~/kubectl') }}
           restore-keys: |
             ${{ runner.os }}-kubectl
+
+      - name: print dir
+        run: |
+          pwd
+          ls ~
 
       - name: Download kubectl client
         if: steps.cache.outputs.cache-hit != 'true'
