--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         id: cache
         with:
           path: ~/kubectl
-          key: ${{ runner.os }}-kubectl-${{ hashFiles('~/kubectl') }}
+          key: ${{ runner.os }}-kubectl1-${{ hashFiles('~/kubectl') }}
           restore-keys: |
             ${{ runner.os }}-kubectl
 
