--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Download kubectl client
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          curl -LO "https://dl.k8s.io/release/v1.22.0/bin/linux/amd64/kubectl" -o ~/kubectl
+          curl -L "https://dl.k8s.io/release/v1.22.0/bin/linux/amd64/kubectl" -o ~/kubectl
           chmod +x ~/kubectl
           sudo mv kubectl /usr/local/bin/
           echo "kubectl" > .kubectl-cache
