--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           curl -L "https://dl.k8s.io/release/v1.22.0/bin/linux/amd64/kubectl" -o ~/kubectl
           chmod +x ~/kubectl
-          sudo mv ~/kubectl /usr/local/bin/
+          sudo cp ~/kubectl /usr/local/bin/
           echo "kubectl" > .kubectl-cache
 
       - name: Verify kubectl installation
