--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,23 @@
 name: Test
 
 on:
-  push:
-    branches: [ "master" ]
   workflow_dispatch:
+  schedule:
+    - cron: '*/5 * * * *'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Print current UTC time
+        run: date -u
+      - name: Get timestamp and format
+        id: time
+        run: |
+          echo "run_time=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
+      
+      - name: Show the time
+        run: echo "Triggered at ${{ steps.time.outputs.run_time }}"
       - name: Cache kubectl client
         uses: actions/cache@v2
         id: cache
